--- a/Submission HTML/index.html
+++ b/Submission HTML/index.html
@@ -29,8 +29,8 @@
             <div class="col-4 p-2">
               <img src="assets/img/img_placeholder_avatar.jpg" alt="" width="250"/></div>
     <div class="col-8 p-2">
-    <h1>Team Name</h1>
-                <h2 class="pb-2">Project Title</h2>
+    <h1>JzDtaSolns</h1>
+                <h2 class="pb-2">A Simplistic Approach to Extending Access to Quality Healthcare</h2>
                 
                 <p class="lead mb-4">Text goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 
@@ -59,11 +59,11 @@
     <div class="col p-2 m-2 p-3 border border-success mr-3"  style="--bs-border-opacity: .5;">
         <h4 class="pb-2">Github Repository</h4>
         <p class="lead mb-4">More text is here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <a href="#">Github Repository Link</a> </div>
+    <a href="https://github.com/jas226/jas226.github.io">Github Repository Link</a> </div>
     <div class="col p-2 m-2 p-3 border border-success"  style="--bs-border-opacity: .5;">
         <h4 class="pb-2">Supporting Documentation</h4>
         <p class="lead mb-4">More text is here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <a href="#">Supporting Documentation PDF Link</a> </div>
+    <a href="https://github.com/jas226/jas226.github.io/blob/master/Submission%20HTML/assets/docs/jas226%20Supporting_Documentation_BiasDetection.pdf">Supporting Documentation PDF Link</a> </div>
   </div>
 
 </div>
